Category selection button fix

--- a/html/index.html
+++ b/html/index.html
@@ -163,8 +163,8 @@
                   </a>
 
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" id="pills-popular-tab">Global absolute</a>
-                    <a class="dropdown-item" id="pills-popular-tab-absloc">Local absolute</a>
+                    <a class="dropdown-item" id="pills-popular-tab" onclick="changeSuggestedVideos(50)">Global absolute</a>
+                    <a class="dropdown-item" id="pills-popular-tab-absloc" onclick="changeSuggestedVideos(51)">Local absolute</a>
                     <a class="dropdown-item" id="pills-popular-tab-relloc" onclick="changeSuggestedVideos(52)">Local relative</a>
                   </div>
               </div>
